# boomberg

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/boomberg/: __init__.py  __main__.py  app.py  config.py
src/boomberg/api/: __init__.py  client.py  eodhd_client.py  exceptions.py  fred_client.py  kalshi_client.py  kalshi_models.py  models.py
src/boomberg/services/: __init__.py  dashboard.py  financials.py  fundamentals.py  historical.py  news.py  portfolio.py  predictions.py  quotes.py  search.py  watchlist.py
src/boomberg/storage/: __init__.py  portfolio_store.py  watchlist_store.py
src/boomberg/ui/: __init__.py  command_history.py
src/boomberg/ui/screens/: __init__.py
src/boomberg/ui/styles/: app.tcss
src/boomberg/ui/widgets/: __init__.py  bonds.py  chart.py  command_bar.py  portfolio.py  predictions.py  quote_panel.py  snapshot.py  ticker_tape.py  watchlist.py
tests/: __init__.py  conftest.py
tests/unit/api/: test_client.py  test_eodhd_client.py  test_fred_client.py  test_kalshi_client.py  test_kalshi_models.py  test_models.py  test_statements.py
tests/unit/services/: test_dashboard.py  test_financials.py  test_fundamentals.py  test_historical.py  test_news.py  test_portfolio.py  test_portfolio_store.py  test_predictions.py  test_quotes.py  test_search.py  test_watchlist.py  test_watchlist_store.py
tests/unit/ui/: test_command_history.py  test_portfolio_widget.py  test_quote_panel.py  test_snapshot_widget.py
tests/unit/ui/widgets/: test_predictions.py
